# openapi-axum-server

./: README.md  gen.sh  gen_tests.sh  run-api-prod.sh  run-api.sh  run-gui-prod.sh  run-gui.sh
api/: .env  .gitignore  Cargo.toml  README.md  run.sh
api/src/: models.rs
api/src/apis/: default.rs
api/src/server/: api.rs  mod.rs
gui/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.sh  index.html  run.sh  run_prod.sh
gui/certs/: gen.sh
gui/src/: app.rs  auth.rs  main.rs
gui/src/auth/: auth.rs
gui/src/com/: log_logout.rs  mod.rs
gui/src/pages/: callback.rs  home.rs  mod.rs
gui/src/srv/: mod.rs  testauth.rs
openapi/: example-openapi.yaml  example-run-test.sh  example-run.sh  gen.sh  ogrod.yaml
openapi/curl-client/docs/: DefaultApi.md
