[package]
name = "yew-gui"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
yew-router = "0.18"
gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8.5", features = ["std", "getrandom"] }
getrandom = { version = "0.2.11", features = ["js"] }
base64 = "0.21"
sha2 = "0.10"
wasm-bindgen = "0.2"
web-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4"

[build]
dist = "dist"
target = "wasm32-unknown-unknown"

[serve]
open = true

